nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: prod
spec:
  containers:
    - name: nginx-container
      image: nginx
