event.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: worker-a
  namespace: demo
spec:
  template:
    spec:
      containers:
        - image: leradicator/ce-function:latest
          env:
            - name: STORAGE_URL
              value: http://result-store.demo.svc.cluster.local
          #args:
          #  - "-text=svc-a OK"
          #  - "-listen=:8080"
--
apiVersion: eventing.knative.dev/v1
kind: Trigger
metadata:
  name: worker-a-trigger
  namespace: demo
spec:
  broker: default
  filter:
    attributes:
      type: com.example.query.requested
  subscriber:
    ref:
      apiVersion: serving.knative.dev/v1
      kind: Service
      name: worker-a
