result-store.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-store
  namespace: demo
spec:
  selector:
    app: result-store
  ports:
    - port: 80
      targetPort: 8000
--
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-frontend
  namespace: demo
spec:
  replicas: 4
  selector:
    matchLabels:
      app: result-store
  template:
    metadata:
      labels:
        app: result-store
    spec:
      containers:
        - name: store
          image: leradicator/result-store:latest
          volumeMounts:
            - mountPath: /data
              name: shared
      volumes:
        - name: shared
          persistentVolumeClaim:
            claimName: shared-data
