store.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-store
  namespace: demo
spec:
  selector:
    app: result-store
  ports:
    - port: 80
